BIP-891: Added minio to HDFS
# Conflicts:
#	charts/hdfs-k8s/bom.yaml
#	charts/hdfs-k8s/dev-test-values.yaml
#	charts/hdfs-k8s/onprem-values.yaml
#	charts/hdfs-k8s/requirements.yaml
#	charts/hdfs-k8s/values.yaml

--- a/charts/hdfs-k8s/bom.yaml
+++ b/charts/hdfs-k8s/bom.yaml
@@ -5,3 +5,4 @@
   - hdfs-namenode-k8s.image.repository:hdfs-namenode-k8s.image.tag
   - hdfs-client-k8s.image.repository:hdfs-client-k8s.image.tag
   - hdfs-datanode-k8s.image.repository:hdfs-datanode-k8s.image.tag
+  - hdfs-gateway.image.repository:hdfs-gateway.image.tag
