--- a/charts/hdfs-k8s/dev-test-values.yaml
+++ b/charts/hdfs-k8s/dev-test-values.yaml
@@ -1,3 +1,8 @@
+hdfs-client-k8s:
+  image:
+    repository: docker.registry:5000/gcr.io/byond-infinity-platform/integrity-hdfs
+    tag: 2.9.2
+hdfs-datanode-k8s:
 hdfs-datanode-k8s:     
   javaResources:
     #xms and xmx in mb
@@ -10,7 +15,16 @@ hdfs-datanode-k8s:
     requests:
      # cpu: 2
      memory: 2G
-
+  image:
+    repository: docker.registry:5000/gcr.io/byond-infinity-platform/integrity-hdfs-datanode
+    tag: 2.9.2
+hdfs-journalnode-k8s:
+  image:
+    repository: docker.registry:5000/gcr.io/byond-infinity-platform/integrity-hdfs-namenode
+    tag: 2.9.2
+  initContainers:
+    repository: docker.registry:5000/busybox
+    tag: 1.27.1
 hdfs-namenode-k8s:
   javaResources:
     #xms and xmx in mb
@@ -23,7 +37,13 @@ hdfs-namenode-k8s:
     requests:
     # cpu: 2
      memory: 2G
-
+  image:
+    repository: docker.registry:5000/gcr.io/byond-infinity-platform/integrity-hdfs-namenode
+    tag: 2.9.2
+zookeeper:
+  image:
+    repository: docker.registry:5000/gcr.io/google_samples/k8szk
+    tag: v3
 global:
 # Where on the local FS where hdfs data will be stored
   dataNodeHostPath:
