BIP-891: Use stable image tag for gateway and add option to disable minio

--- a/charts/hdfs-k8s/values.yaml
+++ b/charts/hdfs-k8s/values.yaml
@@ -179,6 +179,7 @@ hdfs-datanode-k8s:
 ## hdfs-gateway:
 ## ------------------------------------------------------------------------------
 hdfs-gateway:
+  enabled: true
   image:
     repository: gcr.io/byond-infinity-platform/minio-gateway
     tag: "1.0"
