--- a/charts/hdfs-minio/templates/secret.yaml
+++ b/charts/hdfs-minio/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,3 +11,4 @@ type: Opaque
 data:
   accesskey: {{ .Values.accessKey | b64enc }}
   secretkey: {{ .Values.secretKey | b64enc }}
+{{- end }}
