BIP-1884 : Adding integrity-hdfs-ha docker folder

--- a/helm/hdfs/charts/hdfs-k8s/requirements.yaml
+++ b/helm/hdfs/charts/hdfs-k8s/requirements.yaml
@@ -1,5 +1,6 @@
 dependencies:
   - name: zookeeper
+    version: "1.0.0" #NORETAG_HINT
     repository: https://kubernetes-charts-incubator.storage.googleapis.com/
     condition: condition.subchart.zookeeper
     tags:
@@ -62,3 +63,4 @@ dependencies:
     condition: condition.subchart.minio
     tags:
       - ha
+
