BIP-2279: Add resources to all missing containers and small change to… (#2)
* BIP-2279: Add resources to all missing containers and small change to journal node

* BIP-2279: Readded commented section

* BIP-2279: Fix Zookeeper values

* BIP-2279: Make formatting more consistent

* BIP-2279: More formatting

--- a/helm/hdfs/charts/hdfs-k8s/onprem-values.yaml
+++ b/helm/hdfs/charts/hdfs-k8s/onprem-values.yaml
@@ -10,10 +10,10 @@ hdfs-datanode-k8s:
     xmx: 5120
   resources:
     limits:
-     #cpu: 2
+     cpu: 1
      memory: 6G
     requests:
-     # cpu: 2
+     cpu: 500m
      memory: 6G
   image:
     repository: docker.registry:5000/gcr.io/byond-infinity-platform/integrity-hdfs-datanode
@@ -25,6 +25,13 @@ hdfs-journalnode-k8s:
   initContainers:
     repository: docker.registry:5000/busybox
     tag: 1.27.1
+  resources:
+    limits:
+     cpu: 1
+     memory: 1Gi
+    requests:
+     cpu: 500m
+     memory: 600Mi
 hdfs-namenode-k8s:
   javaResources:
     #xms and xmx in mb
@@ -32,10 +39,10 @@ hdfs-namenode-k8s:
     xmx: 3096
   resources: 
     limits:
-    # cpu: 2
+     cpu: 1
      memory: 4G
     requests:
-    # cpu: 2
+     cpu: 500m
      memory: 4G
   image:
     repository: docker.registry:5000/gcr.io/byond-infinity-platform/integrity-hdfs-namenode
@@ -44,6 +51,13 @@ zookeeper:
   image:
     repository: docker.registry:5000/gcr.io/google_samples/k8szk
     tag: v3
+  resources:
+    limits:
+     cpu: 1
+     memory: 4Gi
+    requests:
+     cpu: 500m
+     memory: 2Gi
 hdfs-gateway:
   image:
     repository: docker.registry:5000/gcr.io/byond-infinity-platform/minio-gateway
