BIP-2312 : Adding logic to support active node service.

--- a/docker/integrity-hdfs/namenode/Dockerfile
+++ b/docker/integrity-hdfs/namenode/Dockerfile
@@ -2,7 +2,10 @@ ARG HADOOP_VERSION=2.9.2
 FROM gcr.io/byond-infinity-platform/integrity-hdfs:${HADOOP_VERSION}
 
 ENV HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
-RUN mkdir -p /hadoop/dfs/name
+RUN mkdir -p /hadoop/dfs/name \
+ && curl -L -o /usr/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.10.3/bin/linux/amd64/kubectl \
+ && chmod +x /usr/bin/kubectl
+
 VOLUME /hadoop/dfs/name
 
 COPY run.sh /run.sh
