--- a/helm/hdfs/charts/hdfs-namenode-k8s/templates/pre-pod-labeler-rbac.yaml
+++ b/helm/hdfs/charts/hdfs-namenode-k8s/templates/pre-pod-labeler-rbac.yaml
@@ -16,7 +16,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: {{ .Release.Name }}-pod-labeler
   annotations:
-    "helm.sh/hook": "pre-install"
+    "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-10"
     "helm.sh/hook-delete-policy": "before-hook-creation"
   labels:
@@ -33,7 +33,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: {{ .Release.Name }}-pod-labeler
   annotations:
-    "helm.sh/hook": "pre-install"
+    "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-10"
     "helm.sh/hook-delete-policy": "before-hook-creation"
   labels:
