BIP-2312 : Restoring readiness probe to a single line, since multi-line didn't work well

--- a/helm/hdfs/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/helm/hdfs/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -235,9 +235,7 @@ spec:
               command:
                 - /bin/sh
                 - -ce
-                - >
-                  curl -G --silent --fail $(hostname -i):50070 && \
-                  hdfs haadmin -getAllServiceState | grep $MY_POD | awk '{print $2}' | grep -E '^(active|standby)$' | xargs -I {} kubectl label pod --overwrite $MY_POD status={}
+                - curl -G --silent --fail $(hostname -i):50070 && hdfs haadmin -getAllServiceState | grep $MY_POD | awk '{print $2}' | grep -E '^(active|standby)$' | xargs -I {} kubectl label pod --overwrite $MY_POD status={}
             initialDelaySeconds: 60
             periodSeconds: 10
           resources:
