--- a/docker/integrity-hdfs/docker-compose.yaml
+++ b/docker/integrity-hdfs/docker-compose.yaml
@@ -28,6 +28,21 @@ services:
     - 8089:8088
     - 5076:50075
    hostname: integrity-hadoop-slave
+  
+  integrity-minio:
+    image: minio/minio:latest
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    ports:
+      - 9000:9000
+    networks:
+      - integrity
+    command: minio gateway hdfs http://integrity-hadoop-master:8020
+    restart: always
+    depends_on:
+      - integrity-hadoop-slave
+      - integrity-hadoop-master
 
 networks:
   integrity:
