--- a/docker/integrity-hdfs/namenode/Dockerfile
+++ b/docker/integrity-hdfs/namenode/Dockerfile
@@ -10,6 +10,7 @@ VOLUME /hadoop/dfs/name
 
 COPY ./ui/explorer.js /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.js
 COPY ./ui/explorer.html /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.html
+COPY ./ui/explorer.css /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.css
 
 COPY run.sh /run.sh
 RUN chmod a+x /run.sh
