--- a/docker/integrity-hdfs/namenode/Dockerfile
+++ b/docker/integrity-hdfs/namenode/Dockerfile
@@ -9,6 +9,7 @@ RUN mkdir -p /hadoop/dfs/name \
 VOLUME /hadoop/dfs/name
 
 COPY ./ui/explorer.js /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.js
+COPY ./ui/userList.js /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/userList.js
 COPY ./ui/explorer.html /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.html
 COPY ./ui/explorer.css /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.css
 
