Allowing users to be created in list.

--- a/helm/hdfs/charts/hdfs-k8s/values.yaml
+++ b/helm/hdfs/charts/hdfs-k8s/values.yaml
@@ -103,9 +103,9 @@ hdfs-namenode-k8s:
     size: 100Gi
 
   readonlyCredentials:
-    username: readonly
-    password: readonly123
-
+    - username: readonly
+      password: readonly123
+    
   ## Whether or not to use hostNetwork in namenode pods. Disabling this will break
   ## data locality as namenode will see pod virtual IPs and fails to equate them with
   ## cluster node physical IPs associated with data nodes.
