[BIP-2352] Creating HDFS Readonly UI + Authentication (#4)
* Creating HDFS readonly UI

* Integrating login form logic.

* Final touches on UI. Time to implement user creation

* Adding users.js file into application

* Adding uselist generation through helm

* Allowing users to be created in list.

--- a/docker/integrity-hdfs/namenode/Dockerfile
+++ b/docker/integrity-hdfs/namenode/Dockerfile
@@ -8,6 +8,11 @@ RUN mkdir -p /hadoop/dfs/name \
 
 VOLUME /hadoop/dfs/name
 
+COPY ./ui/explorer.js /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.js
+COPY ./ui/userList.js /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/userList.js
+COPY ./ui/explorer.html /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.html
+COPY ./ui/explorer.css /opt/hadoop-$HADOOP_VERSION/share/hadoop/hdfs/webapps/hdfs/explorer.css
+
 COPY run.sh /run.sh
 RUN chmod a+x /run.sh
 
