--- a/docker/integrity-hdfs/datanode/Dockerfile
+++ b/docker/integrity-hdfs/datanode/Dockerfile
@@ -1,5 +1,5 @@
 ARG HADOOP_VERSION=2.9.2
-FROM gcr.io/byond-infinity-platform/integrity-hdfs:${HADOOP_VERSION}
+FROM integrity-hdfs:${HADOOP_VERSION}
 
 ENV HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
 RUN mkdir -p /hadoop/dfs/data
