Revert "split build and push logic"
This reverts commit d118d4d90cc52f16dec2e1d846ec7a5bcf6299e0.

--- a/docker/integrity-hdfs/namenode/Dockerfile
+++ b/docker/integrity-hdfs/namenode/Dockerfile
@@ -1,5 +1,5 @@
 ARG HADOOP_VERSION=2.9.2
-FROM integrity-hdfs:${HADOOP_VERSION}
+FROM gcr.io/byond-infinity-platform/integrity-hdfs:${HADOOP_VERSION}
 
 ENV HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
 RUN mkdir -p /hadoop/dfs/name \
