DEV-82 : Fixing known issue setting the property autopurge.purgeInterval
Reference: https://github.com/helm/charts/issues/4540

--- a/helm/hdfs/charts/hdfs-k8s/values.yaml
+++ b/helm/hdfs/charts/hdfs-k8s/values.yaml
@@ -5,6 +5,14 @@ zookeeper:
   image:
     repository: gcr.io/google_samples/k8szk
     tag: v3
+
+  # Override command to fix zkGenConfig.sh issue in the docker image. 
+  # ref: https://github.com/kubernetes-retired/contrib/issues/2896
+  command:
+    - /bin/bash
+    - -xec
+    - sed -i 's/purgeInteval/purgeInterval/g' /opt/zookeeper/bin/zkGenConfig.sh && zkGenConfig.sh && exec zkServer.sh start-foreground
+
   ## Configure Zookeeper resource requests and limits
   ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
   resources: {}
